<resources>
    <string name="app_name">KADE Apps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_week"> Game Week </string>
    <string name="date_event">Sun, 01 Jan 1999</string>
    <string name="details">DETAILS</string>
    <string name="shoots_on_target">Shoots On Target</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="goal_scorer">Goal Scorer</string>
    <string name="lineups">LINEUPS</string>
    <string name="goalkeeper">GoalKeeper</string>
    <string name="defender">Defender</string>
    <string name="midfielder">Midfielder</string>
    <string name="striker">Striker</string>
    <string name="substitute">SUBSTITUTE</string>
    <string name="tanggal">Tanggal</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="club">Club</string>
    <string name="match">Match</string>
    <string name="Favorite">Favorite</string>
    <string name="favorites">Favorite</string>
    <string name="stadium"> Stadium</string>
    <string name="detailClub">Detail Club</string>
    <string name="detailMatch">Match Detail</string>
    <string name="vs">vs</string>
    <string name="add_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed to favorite</string>
    <string name="match_fragment">match</string>
    <string name="overview">Details</string>
    <string name="player">Player</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="mf">MIDFIELDER</string>
    <string name="nodataavailable">No data Available</string>
    <string name="detail">detail</string>


    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <string-array name="id_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>
</resources>
